<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shape_header"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:layout_marginStart="35dp"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="104dp"
        android:layout_height="104dp"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="-55dp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:elevation="5dp"
        android:layout_marginHorizontal="35dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="38dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_margin="15dp"
           android:baselineAligned="false">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center_horizontal"
               android:layout_weight="1">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/bookmark"/>
               <TextView
                   android:id="@+id/tv_bookmark_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/bookmark_count"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="center_horizontal"
               android:layout_weight="1">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/history"/>
               <TextView
                   android:id="@+id/tv_history_count"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/history_count"/>
           </LinearLayout>
       </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/buttonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/status"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawablePadding="18dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:gravity="center_vertical"
            android:paddingHorizontal="35dp"
            android:paddingVertical="20dp"
            android:text="@string/title_setting_profile"
            app:drawableLeftCompat="@drawable/setting" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/btn_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_terms_and_condition"
            app:drawableLeftCompat="@drawable/document"
            android:gravity="center_vertical"
            android:drawablePadding="18dp"
            android:paddingVertical="20dp"
            android:paddingHorizontal="35dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_logout"
            app:drawableLeftCompat="@drawable/logout"
            android:gravity="center_vertical"
            android:drawablePadding="18dp"
            android:paddingVertical="20dp"
            android:paddingHorizontal="35dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>